# motivational-video-engine

./: .gitignore  README.md  pyproject.toml
assets/: CATALOG.md
assets/backgrounds/: .gitkeep
assets/figures/: .gitkeep
assets/fonts/: .gitkeep
assets/music/: .gitkeep
assets/overlays/: .gitkeep
config/: COMFYUI_README.md  brand.yaml  comfyui.yaml  comfyui_workflow.json  render_profiles.yaml  series.yaml  visual_worlds.yaml  voices.yaml
content_library/: 00_INDEX.md  01_SCHEMA.md  02_TAXONOMY.md  03_CONTENT_ETHICS.md  04_RIGHTS_AND_SOURCE_NOTES.md  05_VISUAL_WORLD_MAP.md  06_SERIES_MAP.md  07_ARCS_AND_PRODUCTION.md  08_PLANNED_ARCS.md
content_library/arcs/: ancient_greece_greek_tragedy.yaml  ancient_greece_heroic_myth.yaml  ancient_greece_iliad.yaml  ancient_greece_odyssey.yaml  ancient_greece_olympian_myth.yaml  ancient_greece_pre_socratics.yaml  ancient_greece_self_command.yaml  ancient_greece_socratic_questions.yaml  (+9 more)
docs/: 00_PROJECT_VISION.md  01_CONTENT_PHILOSOPHY.md  02_VISUAL_WORLDS.md  03_PIPELINE_ARCHITECTURE.md  04_AGENT_WORKFLOWS.md  05_PROMPT_LIBRARY.md  06_MVP_ROADMAP.md  HANDOFF_PROMPT.md  IMAGE_OVERRIDE_WORKFLOW.md  SCENE_FILM_RENDER_PATH.md  UNSORTED_ASSETS_RUNBOOK.md
scripts/: backfill_script_schema.py  generate_ancient_greece_drafts.py  generate_ancient_near_east_drafts.py  generate_ancient_rome_drafts.py  generate_medieval_world_drafts.py
tests/: audition_kokoro_voices.py  test_captions.py  test_content_spec.py  test_images.py  test_import.py  test_lint.py  test_render.py  test_review.py  test_visual_prompts.py  test_voice.py
(+321 files in other folders)
